<resources>
    <string name="app_name">VisitApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="confirmar">¿Esta seguro que desea marcar?</string>
    <string name="add_dr_info">Info:</string>
    <string name="add_dr_clinic">Clinica:</string>
    <string name="add_dr_dir">Direccion:</string>
    <string name="add_dr_name">Nombre:</string>
    <string name="add_dr_title">Datos del medico</string>
    <string name="accept">CONFIRMAR</string>
    <string name="add_dr_date">Fecha:</string>
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miercoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="dr_list">Lista de medicos</string>
    <string name="news">Novedades</string>
    <string name="logout">Salir</string>
    <string name="title_activity_doctor_detail">DoctorDetailActivity</string>
    <string name="phone">Telefono:</string>
    <string name="email">Email:</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_in_email_hint">Email</string>
    <string name="sign_in_password_hint">Password</string>
    <string name="sign_in_button">Log In</string>
    <string name="forgot_your_password_text">Forgot your password</string>
    <string name="app_title">Vistapp</string>
    <string name="signInError">Error happende :(</string>
    <string name="doctors_list">Lista de medicos</string>
    <string name="doctors">Medicos</string>
    <string name="user">Usuario</string>
    <string name="name">Nombre:</string>
    <string name="dir">Direccion:</string>
    <string name="visit_hour">Hora de visita:</string>
    <string name="clinic">Clinica:</string>
    <string name="info">Info:</string>
</resources>
