<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="800dp"
            android:minWidth="600dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/add_dr_title"/>

            <View
                android:layout_width="match_parent"
                android:background="@color/baseBlack"
                android:layout_height="1dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_dr_name"
                    android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"

                    android:layout_weight="0.5"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/item_value_name"
                    android:layout_width="0dp"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_weight="1.45"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:text="@string/add_dr_dir"
                    android:textSize="18sp"
                    android:layout_weight="0.5"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/item_value_dir"
                    android:layout_width="0dp"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_weight="1.45" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_dr_clinic"
                    android:textSize="18sp"
                    android:layout_weight="0.5"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/item_value_clinic"
                    android:layout_width="0dp"
                    android:inputType="text"
                    android:layout_weight="1.45"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_dr_info"
                    android:textSize="18sp"
                    android:layout_weight="0.5"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/item_value_info"
                    android:layout_width="0dp"
                    android:inputType="text"
                    android:layout_weight="1.45"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_dr_date"
                    android:textSize="18sp"
                    android:layout_weight="0.5"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/item_value_date"
                    android:layout_width="0dp"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_weight="1.45"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_add_doctor"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/accept" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>