<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@color/white"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50dp"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/item_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="@dimen/textSize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/item_subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_place_black_24dp"
                        android:drawablePadding="15dp"
                        android:drawableRight="@drawable/ic_place_black_24dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/dir"
                        android:textSize="@dimen/textSize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/item_subtitle4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/visit_hour"
                        android:textSize="@dimen/textSize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/item_subtitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/clinic"
                        android:textSize="@dimen/textSize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/item_subtitle3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/info"
                        android:textSize="@dimen/textSize"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="-50dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="50dp"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <Button
                    android:id="@+id/btn_more_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="MAS INFORMACION" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
